--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,9 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <%= link_to 'log_out', destroy_user_session_path, method: :delete%>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
