Add tasks controller. Add integration test for user show page content

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <h1><%= t('.sign_up') %></h1>
 
-<h5 class="selector-on">Manager</h5>
-<h5 class="selector-of">Employee</h5>
+<button class="selector-on">Manager</button>
+<button class="selector-of">Employee</button>
 
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
