--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,3 +3,24 @@
 .selector-on {
   color: gold;
 }
+
+.bg-gradblue {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#3d7cbf+35,066dab+96 */
+  background: rgb(61, 124, 191); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(61, 124, 191, 1) 35%,
+    rgba(6, 109, 171, 1) 96%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(61, 124, 191, 1) 35%,
+    rgba(6, 109, 171, 1) 96%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(61, 124, 191, 1) 35%,
+    rgba(6, 109, 171, 1) 96%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d7cbf', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
+}
