--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,7 @@
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d7cbf', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
 }
+
+.container-fluid {
+  background: #efebeb;
+}
