--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
   <body>
 
     <%= render 'layouts/header'%>
-    <p class="notice"><%= notice %></p>
-    <p class="danger"><%= alert %></p>
-    <div class="container">
+    <div class="container-fluid">
       <%= yield %>
     </div>
   </body>
