--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h4> <%= @user.username %> </h4>
 
-<%= link_to "See al my tasks", tasks_path %>
+<%= link_to "See all my tasks", tasks_path %>
 
 <%= link_to 'New task', new_task_path %>
