--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,3 +3,5 @@
 <%= link_to "See all my tasks", tasks_path %>
 
 <%= link_to 'New task', new_task_path %>
+
+<%= link_to 'See all external tasks', externals_task_path %>
