--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -12,7 +12,11 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit 'submit', class: 'btn btn-primary'%>
+    <%= f.collection_select(:group_id, Group.all, :id, :name, {}, {class: 'form-control'}) %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit 'submit', class: 'btn btn-success w-100' %>
   </div>
 
 <% end %>
