--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,7 +25,34 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d7cbf', endColorstr='#066dab',GradientType=0 ); /* IE6-9 */
 }
 
-.container-fluid {
+.bg-darkblue {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#21559e+21,21559e+21,3778c2+64,3778c2+96 */
+  background: rgb(33, 85, 158); /* Old browsers */
+  background: -moz-linear-gradient(
+    top,
+    rgba(33, 85, 158, 1) 21%,
+    rgba(33, 85, 158, 1) 21%,
+    rgba(55, 120, 194, 1) 64%,
+    rgba(55, 120, 194, 1) 96%
+  ); /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(33, 85, 158, 1) 21%,
+    rgba(33, 85, 158, 1) 21%,
+    rgba(55, 120, 194, 1) 64%,
+    rgba(55, 120, 194, 1) 96%
+  ); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    rgba(33, 85, 158, 1) 21%,
+    rgba(33, 85, 158, 1) 21%,
+    rgba(55, 120, 194, 1) 64%,
+    rgba(55, 120, 194, 1) 96%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21559e', endColorstr='#3778c2',GradientType=0 ); /* IE6-9 */
+}
+
+.bg-gray {
   background: #efebeb;
 }
 
