--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 
   <body>
 
-    <%= render 'layouts/header'%>
-    <div class="container-fluid">
+    <%= layout_header %>
+    <div class="container-fluid bg-gray">
       <%= yield %>
     </div>
   </body>
