--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,18 @@
-<h4> <%= @user.username %> </h4>
+<div class="container-fluid w-100 h-100 bg-darkblue">
 
-<%= link_to "See all my tasks", tasks_path %>
+  <div class="row">
+    <div class="col-12 ">
+      <h4> <%= @user.username %> </h4>
 
-<%= link_to 'New task', new_task_path %>
+      <%= link_to "See all my tasks", tasks_path %>
 
-<%= link_to 'See all external tasks', externals_task_path %>
+      <%= link_to 'New task', new_task_path %>
+
+      <%= link_to 'See all external tasks', externals_task_path %>
+
+      <%= link_to 'See all Groups', groups_path %>
+    </div>
+  </div>
+
+</div>
+
