--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
 
-    <%= layout_header %>
+    <%= render 'layouts/header' %>
     <div class="container-fluid bg-gray">
       <%= yield %>
     </div>
