--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -51,8 +51,21 @@
   </div>
 
   <div class="form-group">
+    <%= f.file_field :image, id: 'image' %>
+  </div>
+
+  <div class="form-group">
     <%= f.submit t('.sign_up'), class: 'btn btn-primary', id: 'test' %>
   </div>
 <% end %>
 
 <%= render 'devise/shared/links' %>
+<script type="text/javascript">
+$("#image").bind("change", function() {
+const size_in_megabytes = this.files[0].size/1024/1024;
+if (size_in_megabytes > 5) {
+alert("Maximum file size is 5MB. Please choose a smaller file.");
+$("#micropost_image").val("");
+}
+});
+</script>
