--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,35 @@
 <div class="container-fluid w-100 h-100 bg-darkblue">
 
   <div class="row">
-    <div class="col-12 ">
-      <h4> <%= @user.username %> </h4>
+    <div class="col-6 mx-auto text-center">
+      <%= image_tag @user.image, class: 'user-show-image text-center mt-5'%>
 
-      <%= link_to "See all my tasks", tasks_path %>
+      <h4 class="h1 text-white"> <%= @user.name %> </h4>
+    </div>
+  </div>
 
-      <%= link_to 'New task', new_task_path %>
+  <div class="row">
+    <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
+      <%= link_to edit_user_registration_path(current_user), class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+        <%= fa_icon "cog" %> Account Settings
+      <% end %>
 
-      <%= link_to 'See all external tasks', externals_task_path %>
+      <%= link_to tasks_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+        <%= fa_icon "briefcase" %> See all my tasks
+      <% end %>
 
-      <%= link_to 'See all Groups', groups_path %>
+      <%= link_to new_task_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+        <%= fa_icon 'paper-plane' %> New task
+      <% end %>
+
+      <%= link_to externals_task_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+        <%= fa_icon "globe" %> See all external tasks
+      <% end %>
+
+
+      <%= link_to groups_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+        <%= fa_icon "columns" %> See all groups
+      <% end %>
     </div>
   </div>
 
