added radio button icons for creation of groups

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,5 +20,10 @@
     </div>
   </div>
 
+<div class="row">
+  <div class="col-12">
+    <%= link_to "Add new", new_group_path, class: 'btn btn-success w-100'%>
+  </div>
+</div>
 </div>
 
