--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Groups#new</h1>
-<p>Find me in app/views/groups/new.html.erb</p>
+<%= form_with model: @group, local: true do |f| %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :amount %>
+    <%= f.text_field :amount, class: 'form-control' %>
+  </div>
+
+
+  
+  <% @font_list.each do |font| %>
+      <div class="form-check">
+        <%= f.radio_button :icon, font %>
+        <%# <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked> %>
+        <label class="form-check-label" for="exampleRadios1">
+          <%= chose_group_icon(font) %>
+        </label>
+      </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.submit 'submit', class: 'btn btn-success w-100' %>
+  </div>
+<% end %>
