--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,11 @@
   border-radius: 50%;
 }
 
+.icon-container {
+  height: 300px;
+  overflow: scroll;
+}
+
 $space-amounts: (1, 2, 3, 4, 5);
 
 @each $space in $space-amounts {
