--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -5,22 +5,20 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :amount %>
-    <%= f.text_field :amount, class: 'form-control' %>
+    <%= f.collection_select(:project_id, Project.all, :id, :name, {}, {class: 'form-control'}) %>
   </div>
 
-
-  
-  <% @font_list.each do |font| %>
-      <div class="form-check">
-        <%= f.radio_button :icon, font %>
-        <%# <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked> %>
-        <label class="form-check-label" for="exampleRadios1">
-          <%= chose_group_icon(font) %>
-        </label>
-      </div>
-  <% end %>
-
+  <div class="icon-container">
+    <% @font_list.each do |font| %>
+        <div class="form-check">
+          <%= f.radio_button :icon, font %>
+          <%# <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked> %>
+          <label class="form-check-label" for="exampleRadios1">
+            <%= chose_group_icon(font) %>
+          </label>
+        </div>
+    <% end %>
+  </div>
   <div class="form-group">
     <%= f.submit 'submit', class: 'btn btn-success w-100' %>
   </div>
