--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -12,6 +12,7 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :group %>
     <%= f.collection_select(:group_id, Group.all, :id, :name, {}, {class: 'form-control'}) %>
   </div>
 
