Add option for manager to visualize employees tasks

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,12 @@
   border-radius: 50%;
 }
 
+.user-show-small {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+}
+
 .icon-container {
   height: 300px;
   overflow: scroll;
