--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,10 @@
   </div>
 
   <div class="form-group">
+    <%= f.file_field :image, id: 'image' %>
+  </div>
+
+  <div class="form-group">
     <%= f.submit t('.update'), class: 'btn btn-primary' %>
   </div>
 <% end %>
@@ -35,3 +39,13 @@
 <p><%= t('.unhappy') %>? <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %>.</p>
 
 <%= link_to t('.back'), :back %>
+
+<script type="text/javascript">
+$("#image").bind("change", function() {
+const size_in_megabytes = this.files[0].size/1024/1024;
+if (size_in_megabytes > 5) {
+alert("Maximum file size is 5MB. Please choose a smaller file.");
+$("#micropost_image").val("");
+}
+});
+</script>
