--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,6 +4,7 @@
       <h6 class="h6 text-muted">
         Total Time spent on your tasks
       </h6>
+      <%= assigned_tasks(@user) %>
       <h6 class="h6">
         <%= @user.format_duration(total_time_tasks(@user)) %>
       </h6>
@@ -27,7 +28,7 @@
 
 <div class="row">
   <div class="col-12">
-    <%= link_to "Add new", new_task_path, class: 'btn btn-success w-100'%>
+    <%= link_to "Add new", new_task_path(:user_id => @user.id), class: 'btn btn-success w-100'%>
   </div>
 </div>
 
