--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+
 <h1><%= t('.sign_up') %></h1>
 
 <button class="selector-on">Manager</button>
@@ -60,12 +61,4 @@
 <% end %>
 
 <%= render 'devise/shared/links' %>
-<script type="text/javascript">
-$("#image").bind("change", function() {
-const size_in_megabytes = this.files[0].size/1024/1024;
-if (size_in_megabytes > 5) {
-alert("Maximum file size is 5MB. Please choose a smaller file.");
-$("#micropost_image").val("");
-}
-});
-</script>
+<%= javascript_pack_tag 'main' %>
