--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 
     <%= render 'layouts/header' %>
     <div class="container-fluid bg-gray">
+    <%= render 'layouts/messages'%>
+
       <%= yield %>
     </div>
   </body>
