--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,6 +13,7 @@
     <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
 
       <% @groups.each do |group| %>
+      <% next if group.name == 'None'%>
       <%= link_to group_path(group) do %>
           <div class="d-flex align-items-baseline justify-content-center border-bottom">
             <%= fa_icon group.icon, class: 'f-s-2 text-white' %> <p class='text-white h5 p-3 '> <%= group.name %> </p> 
