--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<div class="container-fluid w-100 h-100 bg-darkblue">
+
+  <div class="row">
+    <div class="col-6 mx-auto text-center">
+
+      <%# <%= image_tag @user.image, class: 'user-show-image text-center mt-5'%>
+
+      <h4 class="h1 text-white"> <%= current_user.name %> </h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
+
+      <% @projects.each do |project| %>
+      <% next if project.name == 'None'%>
+      <%= link_to project_path(project) do %>
+          <div class="d-flex align-items-baseline justify-content-center border-bottom">
+          <p class='text-white h5 p-3 '> <%= project.name %> </p> 
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+
+<div class="row">
+  <div class="col-12">
+    <%= link_to "Add new", new_project_path, class: 'btn btn-success w-100'%>
+  </div>
+</div>
+</div>
