--- a/app/views/managers/employees.html.erb
+++ b/app/views/managers/employees.html.erb
@@ -20,7 +20,20 @@
             <div class="d-flex justify-content-between pt-2"> <p class="m-0 p-0 text-muted"> <%= employee.name %> </p> <p class="m-0 p-0"> <%= link_to 'Manage tasks', tasks_path(:user_id => employee.id)  %> </p>  </div>
             <div class="d-flex justify-content-between pt-1"> <p class="m-0 p-0 text-muted"> <%= 'Period of service: ' %> </p> <p class="m-0 p-0 text-muted"> <%=  working_period(employee) %> </p>   </div>
           </div>
+
         </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+                <%= form_with(scope: :notice, url: managing_employees_path, method: :post, local: true) do |f| %>
+              <div class="form-group">
+                 <%= f.label :body %>
+                 <%= f.text_field :body, class: 'form-control' %>
+               </div>
+
+              <%= f.hidden_field :recipient_id, :value => employee.id %>
+          <% end %>
     </div>
   </div>
 <% end %>
