Add real time alert feature

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <%= render 'notice/alerts' %>
     <%= user_signed_in %>
     <%= user_not_signed_in %>
     <form class="form-inline my-2 my-lg-0">
