--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -18,6 +18,8 @@
     <p>Timer</p>
     <p class='form-control font-weight-bold' id="timer"></p>
     <%= link_to "Start", '#', {class: 'btn btn-success', id: 'button-timer'} %>
+    <%= link_to "stop", '#', {class: 'btn btn-danger d-none', id: 'button-timer-of'} %>
+
    </div>
 
   <div class="form-group">
