--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,12 +5,12 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <%= render 'notice/alerts' %>
+        <ul class="navbar-nav mr-auto">
+
     <%= user_signed_in %>
     <%= user_not_signed_in %>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+    <%= render 'notice/alerts' %>
+      </ul>
   </div>
 </nav>
