--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,12 @@
   </head>
 
   <body>
+<% if current_page?(user_path(current_user)) %>
 
+<% else %>
     <%= render 'layouts/header' %>
+
+<% end %>
     <div class="container-fluid bg-gray">
     <%= render 'layouts/messages'%>
 
