--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
     <%= user_signed_in %>
     <%= user_not_signed_in %>
 
-    <%= render 'notice/alerts' %>
+    <%= notice_alerts %>
       </ul>
   </div>
 </nav>
