Add foundation of chat feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
     <%= render 'layouts/messages'%>
 
       <%= yield %>
+    <div class="chat-container w-25">
+
+      <%= notice_alerts %>
+    </div>
+
     </div>
   </body>
 </html>
