--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
 
           <div class="media-body">
             <div class="d-flex justify-content-between pt-2"> <p class="m-0 p-0 text-muted"> <%= task.name%> </p> <p class="m-0 p-0"> <%=  current_user.format_duration(task.amount) %> </p>  </div>
-            <div class="d-flex justify-content-between pt-1"> <p class="m-0 p-0 text-muted"> <%= task.created_at.to_date %> </p> <p class="m-0 p-0 text-muted"> <%=  task.group.name if task.group %> </p>   </div>
+            <div class="d-flex justify-content-between pt-1"> <p class="m-0 p-0 text-muted"> <%= task.created_at.to_date %> </p> <p class="m-0 p-0 text-muted"><span class='font-weight-bold'> Group: </span><%=  task.group.name if task.group %> </p>   </div>
           </div>
         </div>
     </div>
