--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
 
 
       <%= link_to groups_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
-        <%= fa_icon "columns" %> See all groups
+        <%= fa_icon "columns" %> See all groups of tasks
       <% end %>
 
       <%= link_to projects_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
