--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -14,10 +14,15 @@
 
       <% @groups.each do |group| %>
       <% next if group.name == 'None'%>
-      <%= link_to group_path(group) do %>
-          <div class="d-flex align-items-baseline justify-content-center border-bottom">
-            <%= fa_icon group.icon, class: 'f-s-2 text-white' %> <p class='text-white h5 p-3 '> <%= group.name %> </p> 
+      <%= link_to group_path(group), class: 'w-360' do %>
+        <div class="cont border-bottom d-flex flex-column m-3 pb-2">
+          <div class="d-flex align-items-baseline justify-content-center">
+            <%= fa_icon group.icon, class: 'f-s-2 text-white' %> <p class='text-white h5'> <%= group.name %> </p> 
           </div>
+           <div class="d-flex align-items-baseline justify-content-center">
+              <small class='text-white'> Project: <%= group.project.name %> </small> 
+          </div>      
+          </div>   
         <% end %>
       <% end %>
     </div>
