--- a/app/views/managers/employees.html.erb
+++ b/app/views/managers/employees.html.erb
@@ -26,7 +26,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-                <%= form_with(scope: :notice, url: managing_employees_path, method: :post, local: true) do |f| %>
+                <%= form_with(scope: :notice, method: :post) do |f| %>
               <div class="form-group">
                  <%= f.label :body %>
                  <%= f.text_field :body, class: 'form-control' %>
