add ajax handleling of the chat request

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,8 @@
     <%= render 'layouts/messages'%>
 
       <%= yield %>
-    <div class="chat-container w-25">
-
-      <%= notice_alerts %>
-    </div>
-
+ 
+    <p id= <%= current_user.name %> ></p>
     </div>
   </body>
 </html>
