--- a/app/views/notice/_alerts.html.erb
+++ b/app/views/notice/_alerts.html.erb
@@ -1,25 +1,29 @@
 <% User.all.each do |user| %>
   <% next if user == current_user %>
- <div class="media border d-none">
+ <div class="media border">
+
+
   <%= user_image_small(user) %>
     <div class="media-body">
         <h5 class="mt-0 title font-weight-bold" id='notification'>
           <%= user.name %> <span></span>
           
         </h5>
-        <p class="sub-title" id= 'notice-chat'>
+        <div class="sub-title" id= 'notice-chat'>
           <%# <%= messages_sent %>
 
           
-        </p>
+        </div>
 
         <%= form_with(scope: :notice, url: './notice_create', method: :post, id: 'chat-form') do |f| %>
               <div class="form-group">
                  <%= f.label :body %>
                  <%= f.text_field :body, class: 'form-control' %>
                </div>
-              <%= hidden_field_tag :user, current_user.name %>
-              <%= hidden_field_tag :recipient, user.name %>
+
+              <%= hidden_field_tag :chatroom_id, Chatroom.last.id %>
+              <%= hidden_field_tag :recipient, user.id %>
+
 
               <%= f.hidden_field :recipient_id, :value => user.id %>
           <% end %>
