add new hidden layout for chat

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
 
       <%= yield %>
  
-    <p id= <%= current_user.name %> ></p>
+    <div class= <%= username %> > 
+    <div id="notice-chatss"></div></div>
+    <%= render 'layouts/chat'%>
     </div>
   </body>
 </html>
