--- a/app/views/managers/employees.html.erb
+++ b/app/views/managers/employees.html.erb
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="row">
-   <div class="col-12"> <%= link_to 'Initiate a private chat', new_chat_path, method: :post, remote: true, class: 'btn btn-success', id: 'chat-btn'%> </div> 
+   <div class="col-12"> <%= link_to 'Initiate a private chat', "/new_chat/#{employee.id}", method: :post, remote: true, class: 'btn btn-success', id: 'chat-btn'%> </div> 
     <div id="chat-container"></div>
   </div>
 <% end %>
