--- a/app/views/notice/_alerts.js.erb
+++ b/app/views/notice/_alerts.js.erb
@@ -1,4 +1,4 @@
-let chatWindow = document.getElementById("chat-default");
+let chatWindow = document.getElementById("dis-none");
             chatWindow.classList.remove("d-none");
             let recipiendId = "<%= test %>"
             let newRec = document.getElementById("notice_recipient_id")
