Cleaned most of the design. add more styling to the UI

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <%= form_with model: @group, local: true do |f| %>
   <div class="form-group">
     <%= f.label :name %>
@@ -22,4 +24,4 @@
   <div class="form-group">
     <%= f.submit 'submit', class: 'btn btn-success w-100' %>
   </div>
-<% end %>
+<% end %></div>
