--- a/app/views/layouts/_chat.html.erb
+++ b/app/views/layouts/_chat.html.erb
@@ -1,22 +1,13 @@
-				<div class="col-md-8 col-xl-6 chat d-none" id='dis-none'>
+				<div class="col-md-8 col-xl-6 chat d-none mt-3" id='dis-none'>
 					<div class="card" id='chat-defaul'>
-						<div class="card-header msg_head">
+						<div class="card-header msg_head p-0">
 							<div class="d-flex bd-highlight">
-								<div class="img_cont">
-									<img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg" class="rounded-circle user_img">
-									<span class="online_icon"></span>
-								</div>
 								<div class="user_info">
-									<span>Chat with Khalid</span>
-									<p>1767 Messages</p>
-								</div>
-								<div class="video_cam">
-									<span><i class="fas fa-video"></i></span>
-									<span><i class="fas fa-phone"></i></span>
+									<span>Live Chat</span>
 								</div>
 							</div>
             </div>
-            <div class="append scroll h-50" id="chat-default">
+            <div class="append scroll h-75" id="chat-default">
 
               </div>
               <div class="card-footer">
