--- a/app/views/tasks/done.html.erb
+++ b/app/views/tasks/done.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h3> Submit as done </h3>
 
 <%= form_with(model: @task, url: done_post_path, method: :post, local: true) do |f| %>
@@ -26,3 +28,5 @@
   </div>
 
 <% end %>
+
+</div>
