--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h3> Create a new task </h3>
 
 <%= form_with(model: @task, local: true) do |f| %>
@@ -39,3 +41,4 @@
 
 <%= javascript_pack_tag 'timer' %>
 
+</div>
