--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
+
 <div class="row">
-  <div class="col-12 p-0">
+  <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
         Total Time spent on your tasks from the group: <span class='text-capitalize font-weight-bold'><%= @group.name %></span>
@@ -29,4 +31,5 @@
   <div class="col-12">
     <%= link_to "Add new", new_task_path(:group_id => @group.id ), class: 'btn btn-success w-100'%>
   </div>
+</div>
 </div>
