--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <%= restrict_header %>
 
-    <div class="container-fluid bg-gray">
+    <div class="container-fluid bg-gray p-0">
     <%= render 'layouts/messages'%>
 
       <%= yield %>
