--- a/app/views/managers/employees.html.erb
+++ b/app/views/managers/employees.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
+
 <div class="row">
-  <div class="col-12 p-0">
+  <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
         Here are all employees from your department
@@ -29,3 +31,4 @@
     <div id="chat-container"></div>
   </div>
 <% end %>
+</div>
