--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <%= form_with model: @project, local: true do |f| %>
   <div class="form-group">
     <%= f.label :name %>
@@ -7,4 +9,4 @@
   <div class="form-group">
     <%= f.submit 'submit', class: 'btn btn-success w-100' %>
   </div>
-<% end %>
+<% end %></div>
