--- a/app/views/tasks/externals.html.erb
+++ b/app/views/tasks/externals.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <div class="row">
   <div class="col-12 p-0">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
@@ -29,3 +31,4 @@
   </div>
 </div>
 
+</div>
