--- a/app/views/tasks/future.html.erb
+++ b/app/views/tasks/future.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
+
 <div class="row">
-  <div class="col-12 p-0">
+  <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
         Total time estimated you will need to complete those tasks
@@ -26,4 +28,4 @@
   </div>
 <% end %>
 
-
+</div>
