--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,7 @@
+<div class="container">
+
 <div class="row">
-  <div class="col-12 p-0">
+  <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
         Total Time spent on your tasks
@@ -31,4 +33,4 @@
     <%= link_to "Add new", new_task_path(:user_id => @user.id), class: 'btn btn-success w-100'%>
   </div>
 </div>
-
+</div>
