--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,6 +52,10 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#21559e', endColorstr='#3778c2',GradientType=0 ); /* IE6-9 */
 }
 
+.vh-95 {
+  min-height: 95vh;
+}
+
 .w-360 {
   width: 360px;
 }
