--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,13 +1,7 @@
 <div class="container-fluid w-100 h-100 bg-darkblue">
+    <%= header_two %>
 
-  <div class="row">
-    <div class="col-6 mx-auto text-center">
 
-      <%# <%= image_tag @user.image, class: 'user-show-image text-center mt-5'%>
-
-      <h4 class="h1 text-white"> <%= current_user.name %> </h4>
-    </div>
-  </div>
 
   <div class="row">
     <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
@@ -19,6 +13,9 @@
           <div class="d-flex align-items-baseline justify-content-center">
             <%= fa_icon group.icon, class: 'f-s-2 text-white' %> <p class='text-white h5'> <%= group.name %> </p> 
           </div>
+           <div class="d-flex align-items-baseline justify-content-center">
+              <small class='text-white'> Created: <%= group.created_at.strftime("%B, %d, %Y") %> </small> 
+          </div>     
            <div class="d-flex align-items-baseline justify-content-center">
               <small class='text-white'> Project: <%= group.project.name %> </small> 
           </div>      
