--- a/app/views/tasks/externals.html.erb
+++ b/app/views/tasks/externals.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
 
 <div class="row">
-  <div class="col-12 p-0">
+  <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
-        Total Time spent on your tasks
+        Total Time spent on your tasks that did not belong to any group
       </h6>
       <h6 class="h6">
         <%= current_user.format_duration(total_time_tasks(current_user, true)) %>
@@ -18,8 +18,8 @@
         <div class="media bg-white shadow-sm border p-2">
         <%= group_icon(task) %>
           <div class="media-body">
-            <div class="d-flex justify-content-between pt-2"> <p class="m-0 p-0 text-muted"> <%= task.name%> </p> <p class="m-0 p-0"> <%=  current_user.format_duration(task.amount) %> </p>  </div>
-            <div class="d-flex justify-content-between pt-1"> <p class="m-0 p-0 text-muted"> <%= task.created_at.to_date %> </p> <p class="m-0 p-0 text-muted"> <%=  task.group.name if task.group %> </p>   </div>
+            <div class="d-flex justify-content-between pt-2"> <p class="m-0 p-0 text-muted"> <span class='font-weight-bold'>Name:</span>  <%= task.name%> </p> <p class="m-0 p-0"> <span class='font-weight-bold'>Duration:</span>  <%=  current_user.format_duration(task.amount) %> </p>  </div>
+            <div class="d-flex justify-content-between pt-1"> <p class="m-0 p-0 text-muted"><span class='font-weight-bold'>Date of execution:</span> <%= task.created_at.strftime("%B, %d, %Y") %> </p> <p class="m-0 p-0 text-muted"><span class='font-weight-bold'> Group: </span><%=  task.group.name if task.group %> </p>   </div>
           </div>
         </div>
     </div>
