--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
   <div class="col-12">
     <div class="d-flex justify-content-between bg-white shadow-sm p-3 border">
       <h6 class="h6 text-muted">
-        Total Time spent on your tasks
+        Total Time spent on all your tasks
       </h6>
       <%= assigned_tasks(@user) %>
       <h6 class="h6">
