--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,7 +7,7 @@
         Total Time spent on your tasks from the group: <span class='text-capitalize font-weight-bold'><%= @group.name %></span>
       </h6>
       <h6 class="h6">
-        <%= current_user.format_duration(total_group_time(@group)) %>
+        <%= current_user.format_duration(total_group_time(@tasks)) %>
       </h6>
     </div>
   </div>
