add alignment to the navbars icons

--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -81,7 +81,7 @@
   padding: 5px 10px;
   margin-bottom: 15px !important;
 }
-.active {
+.actives {
   background-color: rgba(0, 0, 0, 0.3);
 }
 .user_img {
