--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -7,8 +7,12 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :project_Name %>
+
     <%= f.collection_select(:project_id, project_all, :id, :name, {}, {class: 'form-control'}) %>
   </div>
+
+  <%= f.label :icon %>
 
   <div class="icon-container">
     <% @font_list.each do |font| %>
