--- a/app/views/layouts/_signedin.html.erb
+++ b/app/views/layouts/_signedin.html.erb
@@ -1,13 +1,11 @@
-        <li class="nav-item active">
-          <%= link_to user_path(current_user), class: 'nav-link' do %>
+        <li class="nav-item ">
+          <%= link_to user_path(current_user), class: 'nav-link active' do %>
           Home <span class="sr-only">(current)</span>
           <% end %>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+
         <li class="nav-item dropdown">
-          <%= link_to current_user.username, '#', class:"nav-link dropdown-toggle active", 'data-toggle' => 'dropdown' %>
+          <%= link_to current_user.name, '#', class:"nav-link dropdown-toggle active", 'data-toggle' => 'dropdown' %>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to 'My profile', user_path(current_user), class: 'dropdown-item' %>
             <%= link_to 'Edit profile', edit_user_registration_path(current_user), class: 'dropdown-item' %>
