--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container-fluid w-100 h-100 bg-darkblue">
+<div class="container-fluid w-100 vh-100 bg-darkblue">
 
   <div class="row">
-    <div class="col-6 mx-auto text-center">
+    <div class="col-9 col-md-6 mx-auto text-center">
       <%= user_image(current_user) %>
 
       <h4 class="h1 text-white"> <%= @user.name %> </h4>
@@ -10,7 +10,7 @@
   </div>
 
   <div class="row">
-    <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
+    <div class="col-9 col-md-6 mx-auto text-center d-flex flex-column align-items-center">
       <%= link_to edit_user_registration_path(current_user), class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
         <%= fa_icon "cog" %> Account Settings
       <% end %>
