--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid w-100 vh-100 bg-darkblue">
 
   <div class="row">
-    <div class="col-9 col-md-6 mx-auto text-center">
+    <div class="col-12 col-md-6 mx-auto text-center">
       <%= user_image(current_user) %>
 
       <h4 class="h1 text-white"> <%= @user.name %> </h4>
@@ -10,29 +10,29 @@
   </div>
 
   <div class="row">
-    <div class="col-9 col-md-6 mx-auto text-center d-flex flex-column align-items-center">
-      <%= link_to edit_user_registration_path(current_user), class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+    <div class="col-12 col-md-6 mx-auto text-center d-flex flex-column align-items-center">
+      <%= link_to edit_user_registration_path(current_user), class: 'text-white h3  sm-h2  p-3 sm-w-100 w-75 border-bottom' do %>
         <%= fa_icon "cog" %> Account Settings
       <% end %>
 
-      <%= link_to tasks_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+      <%= link_to tasks_path, class: 'text-white h3   p-3 w-75 sm-h2  sm-w-100 border-bottom' do %>
         <%= fa_icon "briefcase" %> See all my tasks
       <% end %>
 
-      <%= link_to new_task_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+      <%= link_to new_task_path, class: 'text-white h3   p-3 w-75 sm-h2 sm-w-100 border-bottom' do %>
         <%= fa_icon 'paper-plane' %> New task
       <% end %>
 
-      <%= link_to externals_task_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+      <%= link_to externals_task_path, class: 'text-white h3   p-3 w-75 sm-w-100 sm-h2 border-bottom' do %>
         <%= fa_icon "globe" %> See all external tasks
       <% end %>
 
 
-      <%= link_to groups_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+      <%= link_to groups_path, class: 'text-white h3   p-3 w-75 sm-h2 sm-w-100 border-bottom' do %>
         <%= fa_icon "columns" %> See all groups of tasks
       <% end %>
 
-      <%= link_to projects_path, class: 'text-white h5 w-25 p-3 w-50 border-bottom' do %>
+      <%= link_to projects_path, class: 'text-white h3   p-3 w-75 sm-h2 sm-w-100 border-bottom' do %>
         <%= fa_icon "project-diagram", type: :solid %> See all projects
       <% end %>
 
