--- a/app/views/layouts/_header_two.html.erb
+++ b/app/views/layouts/_header_two.html.erb
@@ -15,7 +15,7 @@
       </ul>
   </div>
   </div>
-    <h4 class="h2 text-white"> See all groups </h4>
+    <h4 class="h2 text-white sm-h3"> See all groups </h4>
 
   <%= fa_icon 'search', class: 'text-white'%>
   </div>
