--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -107,12 +107,27 @@ $space-amounts: (1, 2, 3, 4, 5);
   }
 }
 
-@media only screen and (max-width: 799px) {
+@media only screen and (max-width: 450px) {
   .sm-h1 {
     font-size: 2.5rem !important;
   }
   .sm-h2 {
     font-size: 1.7rem !important;
+  }
+  .sm-h3 {
+    font-size: 1.3rem !important;
+  }
+
+  .sm-h4 {
+    font-size: 1.1rem !important;
+  }
+
+  .sm-h5 {
+    font-size: 0.8rem !important;
+  }
+
+  .sm-h7 {
+    font-size: 0.5rem !important;
   }
   .sm-w-100 {
     width: 65% !important;
