add styling for mobile screen size for group index and project index

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,7 +8,7 @@
       <% @groups.each do |group| %>
       <% next if group.name == 'None'%>
         <div class="row">
-    <div class="col-6 mx-auto text-center d-flex flex-column align-items-center">
+    <div class="col-6 col-md-12 mx-auto text-center d-flex flex-column align-items-center">
       <%= link_to group_path(group), class: 'w-360' do %>
         <div class="cont border-bottom d-flex flex-column my-3 pb-2">
           <div class="d-flex align-items-baseline justify-content-center">
